2008-06-27  Sam Steingold  <sds@gnu.org>

	* constsym.d, control.d, eval.d, fsubr.d, io.d, lisparit.d:
	* package.d, predtype.d, spvw.d, spvw_allocate.d, spvw_language.d
	(let*, *package*, *readtable*, *evalhook*, *applyhook*)
	(*gc-statistics*, *random-state*):
	use "star" instead of "stern" for C names
	* intdiv.d (UDS_divide_): rename local variable q_stern -> q_star
	* intsqrt.d (UDS_sqrt_): rename local variable b_stern -> b_star

2008-06-26  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): use "..._of_list" instead
	of "..._from_list"
	* modules/berkeley-db/bdb.c, modules/clx/new-clx/clx.f:
	* modules/rawsock/rawsock.c, modules/syscalls/calls.c: update

2008-06-26  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (WITH-GCONTEXT, set-wm-class):
	STRING-CONCAT requires package prefix

2008-06-26  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/demos/sokoban.lisp (init-sokoban):
	do not set *display*
	(sokoban): use xlib:with-open-display;
	handle numeric keypad

2008-06-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (change_property): remove
	(SET-WM-HINTS, CHANGE-PROPERTY): use XChangeProperty() directly
	and ignore its return value which is always 1
	(RECOLOR-CURSOR): fix background handling

2008-06-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (with-open-display): define & export
	* modules/clx/new-clx/demos/bball.lisp:
	* modules/clx/new-clx/demos/bwindow.lisp:
	* modules/clx/new-clx/demos/clclock.lisp:
	* modules/clx/new-clx/demos/greynetic.lisp:
	* modules/clx/new-clx/demos/hanoi.lisp:
	* modules/clx/new-clx/demos/koch.lisp:
	* modules/clx/new-clx/demos/petal.lisp:
	* modules/clx/new-clx/demos/plaid.lisp:
	* modules/clx/new-clx/demos/qix.lisp:
	* modules/clx/new-clx/demos/recurrence.lisp: use it

2008-06-25  Sam Steingold  <sds@gnu.org>

	move WM-HINTS to C to better handle word size differences
	* modules/clx/new-clx/clx.f (lookup_display, change_property): add