@@ -6,9 +6,6 @@ URGENT PROBLEMS
 Should handle these soon.
 
 
-bind-eval.tst failure on Linux/amd64 [bruno]
-
-
 Many pretty-printer ansi test failures.
 (sds - but bruno has to fix the risky-test in iofkts.tst first)
 
