@@ -1,3 +1,8 @@
+2008-06-27  Sam Steingold  <sds@gnu.org>
+
+	* tests.lisp (run-all-tests): run "bind" both :EVAL and :COMPILE
+	regardless of disable-risky
+
 2008-06-24  Sam Steingold  <sds@gnu.org>
 
 	* eval20.tst: add some let/eval/symbol-value tests
